--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=123456789012
 VITE_FIREBASE_APP_ID=1:123456789012:web:abcdef123456
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Gemini API Configuration
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Google OAuth Configuration
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
